kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-node-app
  namespace: sre-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-node-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sre-node-app
    spec:
      containers:
      - name: app
        image: 226198813310.dkr.ecr.us-east-1.amazonaws.com/sre-node-app:1.0   # Replace with ECR image later
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
