kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-node-service
  namespace: sre-app
spec:
  type: LoadBalancer
  selector:
    app: sre-node-app
  ports:
    - port: 80
      targetPort: 3000
